--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         
         <center>
         <div id="contact">
-            <p>For any questions or concerns, please feel free to contact me at Jake.Muller1@UMaine.edu</p>
+            <p>For any questions or concerns, please feel free to contact me at Jake.Muller1@Maine.edu</p>
             <img src="images/sneakerhead.jpg" height=200px width=200px>
         </div>
         </center>
